<resources>
    <string name="app_name">GalePress</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_crop">CropAndShareActivity</string>
    <string name="version">1.3 (git build)</string>
    <string name="no_media_warning">Storage media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title_App_Ver_Dir">%1$s %2$s: %3$s</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter password</string>
    <string name="text_not_found">Result not found</string>
    <string name="searching_">Searching&#8230;</string>
    <string name="toggle_links">Highlight and enable links</string>
    <string name="no_further_occurrences_found">No further occurrences found</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="strike_out">Strike-out</string>
    <string name="delete">Delete</string>
    <string name="highlight">Highlight</string>
    <string name="underline">Underline</string>
    <string name="edit_annotations">Edit annotations</string>
    <string name="ink">Ink</string>
    <string name="save">Save</string>
    <string name="print">Print</string>
    <string name="dismiss">Dismiss</string>
    <string name="parent_directory">[Up one level]</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="entering_reflow_mode">Entering reflow mode</string>
    <string name="leaving_reflow_mode">Leaving reflow mode</string>
    <string name="print_failed">Print failed</string>
    <string name="select_text">Select text</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="no_text_selected">No text selected</string>
    <string name="draw_annotation">Draw annotation</string>
    <string name="nothing_to_save">Nothing to save</string>
    <string name="document_has_changes_save_them_">Document has changes. Save them?</string>
    <string name="cannot_open_document">Cannot open document</string>
    <string name="cannot_open_crop">Cannot open share screen</string>
    <string name="cannot_open_document_Reason">Cannot open document: %1$s</string>
    <string name="cannot_open_file_Path">Cannot open file: %1$s</string>
    <string name="cannot_open_buffer">Cannot open buffer</string>
    <string name="fill_out_text_field">Fill out text field</string>
    <string name="okay">Okay</string>
    <string name="choose_value">Choose value</string>
    <string name="not_supported">Not supported</string>
    <string name="copy_text_to_the_clipboard">Copy text to the clipboard</string>
    <string name="more">More</string>
    <string name="accept">Accept</string>
    <string name="copy_text">copy text</string>
    <string name="format_currently_not_supported">Format currently not supported</string>
    <string name="toggle_reflow_mode">Toggle reflow mode</string>
    <string name="no_customer_application">Application not found</string>
    <string name="select_customer_application">Please select application</string>
    <string name="OKU">View</string>
    <string name="SIL">Delete</string>
    <string name="INDIR">Download</string>
    <string name="GUNCELLE">Update</string>
    <string name="IPTAL">Cancel</string>
    <string name="KATEGORILER">Categories</string>
    <string name="EXTRA">Extras</string>
    <string name="SETTINGS">Settings</string>
    <string name="ONAY">Confirmation</string>
    <string name="EVET">Yes</string>
    <string name="HAYIR">No</string>
    <string name="TAMAM">OK</string>
    <string name="UYARI">Warning</string>
    <string name="HATA">Error</string>
    <string name="AC">Open</string>
    <string name="ARA">Search..</string>
    <string name="ARIYOR">Searching..</string>
    <string name="HOME">Home</string>
    <string name="LIBRARY">Library</string>
    <string name="DOWNLOADED">Downloaded</string>
    <string name="INFO">Info</string>
    <string name="INAPPPURCHASE">In - App Billing</string>
    <string name="WARNING_0">Unexpected error occured</string>
    <string name="WARNING_1">No internet connection.</string>
    <string name="WARNING_2">Please type your password</string>
    <string name="WARNING_101">Wrong Password</string>
    <string name="WARNING_102">Content couldn\'t found</string>
    <string name="WARNING_103">Content is not active or blocked</string>
    <string name="WARNING_104">Interactivity is not completed</string>
    <string name="WARNING_120">No customer found</string>
    <string name="WARNING_120_2">Wrong Application Id</string>
    <string name="WARNING_130">No application found</string>
    <string name="WARNING_131">Application is not active or expired</string>
    <string name="WARNING_140">Login infromations are not correct</string>
    <string name="WARNING_141">You must create an account with www.galepress.com</string>
    <string name="WARNING_160">User not found</string>
    <string name="WARNING_161">Wrong Password</string>
    <string name="WARNING_162">our incorrect password entry limit is full. Wait 2 hours for your account to reactivate</string>
    <string name="CONFIRM_1">Are you sure you want to delete?</string>
    <string name="CONFIRM_2">Are you sure you want to cancel other downloads?</string>
    <string name="CONFIRM_3">Are you sure you want to cancel this download?</string>
    <string name="CONFIRM_SETTING">Are you sure you want to reset?</string>
    <string name="ERROR_1">Document is not a valid.</string>
    <string name="INFO_1">%1$d results found.</string>
    <string name="INFO_2">Search Competed</string>
    <string name="INFO_3">Page %1$d</string>
    <string name="INFO_4">Loading</string>
    <string name="PLACEHOLDER1">Search by content name</string>
    <string name="Error">Error</string>
    <string name="OK">OK</string>
    <string name="Open">Open</string>
    <string name="Done">Done</string>
    <string name="pageOfpage">%1$d / %2$d</string>
    <string name="Page">Page %d</string>
    <string name="Document_is_not_valid">Document is not a valid PDF file!</string>
    <string name="Document_is_password_protected">Documents is password protected!</string>
    <string name="Search_Document">Search Document</string>
    <string name="Searching">Searching</string>
    <string name="Search_Completed">Search Completed</string>
    <string name="results_found">%1$d results found</string>
    <string name="show_all">Show All</string>
    <string name="hide_all">Hide All</string>
    <string name="backDescription">Back to the library</string>
    <string name="email">E-Mail</string>
    <string name="forceUpdateWarnMessage">You must update application from Google Play.</string>
    <string name="forceUpdateBlockMessage">Application is blocked. Please update application.</string>
    <string name="goToMarket">Go to Store</string>
    <string name="latitude_longitude"><![CDATA[<string name=\"latitude_longitude\">%1$.8f, %2$.8f</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="connected">Client connected</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="disconnected">Client disconnected</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="title_activity_launch">LaunchActivity</string>
    <string name="links">Links</string>
    <string name="left_menu_setting">Login Informations</string>
    <string name="user_information_check">Checking user information...</string>
    <string name="user_information_missing">User information is missing</string>
    <string name="KULLANICIADI">Username</string>
    <string name="SIFRE">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="viewer_facebook_login_warning">Unable to login with Facebook</string>
    <string name="viewer_facebook_login_appId_warning">Please enter Application ID</string>
    <string name="FacebookLogin">Login With Facebook</string>
    <string name="facebook_app_id">583822921756369</string>
    <string name="BILLING_RESPONSE_RESULT_OK">Payment successful</string>
    <string name="BILLING_RESULT_USER_CANCELED">Payment canceled</string>
    <string name="BILLING_RESULT_BILLING_UNAVAILABLE">Google services unavailable</string>
    <string name="BILLIN_RESULT_ITEM_UNAVAILABLE">Product unavailable</string>
    <string name="BILLING_RESULT_ERROR">Payment unsuccessful</string>
    <string name="RESULT_ITEM_ALREADY_OWNED">Product already owned</string>
    <string name="BILLING_RESULT_ITEM_NOT_OWNED">Product not owned</string>
    <string name="BILLING_UNEXPECTED">Unexpected error occurred</string>
    <string name="ChooseApplication">Choose Application</string>
    <string name="membership">Membership</string>
    <string name="Subscribe">Subscribe</string>
    <string name="Restore">Restore</string>
    <string name="subscription_check">Checking subscription...</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="signup">Sign Up</string>
    <string name="cannot_load">Cannot load page</string>
    <string name="language">en</string>
    <string name="subscription_warning">No subscription</string>
    <string name="subscription_owned">Subscription already owned.</string>
    <string name="subscription_type_owned">%1$s subscription already owned.</string>
    <string name="WEEK">Weekly</string>
    <string name="MONTH">Monthly</string>
    <string name="YEAR">Yearly</string>
    <string name="select_subscription">Please select subscription</string>
    <string name="login_warning_inapp_billing">Please login to purchase...</string>
    <string name="purchase_validation_checking">Purchase validating...</string>
    <string name="purchase_validation_fail">Purchase validation failed.</string>
    <string name="purchase_validation_success">Purchase validation successful</string>
    <string name="subscription_finish">Your subscription has expired.</string>
    <string name="product_price_error">Product prices could not be reached.</string>
    <string name="skip">Skip account sign up</string>
    <string name="connect_with">Connect with</string>
    <string name="language_code">en</string>
    <string name="usedLibraries">Used libraries</string>
</resources>