<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >


    <ViewAnimator
		android:id="@+id/switcher"
		android:layout_width="wrap_content"
		android:layout_height="60dp"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true">

		<RelativeLayout
			android:id="@+id/topBar0Main"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/shadow"
                android:background="@android:color/transparent"
                android:alpha="0.2"
                android:adjustViewBounds="false"
                android:layout_alignParentBottom="true" />

            <TextView
				android:id="@+id/docNameText"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/linkButton"
				android:layout_alignParentLeft="true"
				android:paddingLeft="16dp"
				android:singleLine="true"
				android:textColor="#FFFFFF"
                android:visibility="gone"/>

			<ImageButton
				android:id="@+id/linkButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/reflowButton"
				android:contentDescription="@string/toggle_links"
				android:background="@drawable/button"
				android:src="@drawable/ic_link"
                android:visibility="gone"/>

			<ImageButton
				android:id="@+id/reflowButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/outlineButton"
				android:contentDescription="@string/toggle_reflow_mode"
				android:background="@drawable/button"
				android:src="@drawable/ic_reflow"
                android:visibility="gone"/>

			<ImageButton
				android:id="@+id/outlineButton"
				android:layout_width="35dp"
				android:layout_height="35dp"
				android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
				android:contentDescription="@string/outline_title"
                android:background="@android:color/transparent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

			<ImageButton
				android:id="@+id/searchButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@+id/outlineButton"
				android:contentDescription="@string/search_document"
				android:background="@android:color/transparent"
				android:src="@drawable/left_menu_search_icon"
                android:paddingLeft="10dp"
                android:layout_margin="7dp"
                android:visibility="gone" />
            <ImageButton
                android:id="@+id/mailButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:onClick="OnMoreButtonClick"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <ImageButton
                android:id="@+id/moreButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/more"
                android:background="@drawable/button"
                android:onClick="OnMoreButtonClick"
                android:src="@drawable/ic_more"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/reader_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:textSize="@dimen/actionbar_text_size"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:layout_toRightOf="@+id/outlineButton"
                android:layout_marginLeft="10dp" />

        </RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar1Search"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/cancelSearch"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:contentDescription="@string/cancel"
				android:background="@android:color/transparent"
				android:onClick="OnCancelSearchButtonClick"
				android:src="@drawable/ic_cancel" />

			<EditText
				android:id="@+id/searchText"
				android:background="@drawable/search"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@+id/cancelSearch"
				android:layout_toLeftOf="@+id/searchBack"
				android:inputType="text"
				android:hint="@string/search"
				android:singleLine="true" />

			<ImageButton
				android:id="@+id/searchBack"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/searchForward"
				android:contentDescription="@string/search_backwards"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_arrow_left" />

			<ImageButton
				android:id="@+id/searchForward"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/search_forwards"
				android:background="@android:color/transparent"
				android:src="@drawable/ic_arrow_right" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar2Annot"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/cancelAnnotButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:contentDescription="@string/cancel"
				android:background="@drawable/button"
				android:onClick="OnCancelAnnotButtonClick"
				android:src="@drawable/ic_cancel" />

			<ImageButton
				android:id="@+id/highlightButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/underlineButton"
				android:contentDescription="@string/highlight"
				android:background="@drawable/button"
				android:onClick="OnHighlightButtonClick"
				android:src="@drawable/ic_highlight" />

			<ImageButton
				android:id="@+id/underlineButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/strikeOutButton"
				android:contentDescription="@string/underline"
				android:background="@drawable/button"
				android:onClick="OnUnderlineButtonClick"
				android:src="@drawable/ic_underline" />

			<ImageButton
				android:id="@+id/strikeOutButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/inkButton"
				android:contentDescription="@string/strike_out"
				android:background="@drawable/button"
				android:onClick="OnStrikeOutButtonClick"
				android:src="@drawable/ic_strike" />

			<ImageButton
				android:id="@+id/inkButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/ink"
				android:background="@drawable/button"
				android:onClick="OnInkButtonClick"
				android:src="@drawable/ic_pen" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar3Delete"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/cancelDeleteButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:contentDescription="@string/cancel"
				android:background="@drawable/button"
				android:onClick="OnCancelDeleteButtonClick"
				android:src="@drawable/ic_cancel" />

			<TextView
				android:id="@+id/deleteLabel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@+id/cancelDeleteButton"
				android:layout_toLeftOf="@+id/deleteButton"
				android:gravity="center"
				android:singleLine="true"
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:text="@string/delete"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<ImageButton
				android:id="@+id/deleteButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/delete"
				android:background="@drawable/button"
				android:onClick="OnDeleteButtonClick"
				android:src="@drawable/ic_trash" />

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar4More"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/cancelMoreButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:contentDescription="@string/cancel"
				android:background="@drawable/button"
				android:onClick="OnCancelMoreButtonClick"
				android:src="@drawable/ic_cancel" />

			<ImageButton
				android:id="@+id/printButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/copyTextButton"
				android:contentDescription="@string/print"
				android:background="@drawable/button"
				android:onClick="OnPrintButtonClick"
				android:src="@drawable/ic_print" />

			<ImageButton
				android:id="@+id/copyTextButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toLeftOf="@+id/editAnnotButton"
				android:layout_alignWithParentIfMissing="true"
				android:contentDescription="@string/copy_text_to_the_clipboard"
				android:background="@drawable/button"
				android:onClick="OnCopyTextButtonClick"
				android:src="@drawable/ic_clipboard" />

			<ImageButton
				android:id="@+id/editAnnotButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/edit_annotations"
				android:background="@drawable/button"
				android:onClick="OnEditAnnotButtonClick"
				android:src="@drawable/ic_annotation" />
		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/topBar5Accept"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageButton
				android:id="@+id/cancelAcceptButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentLeft="true"
				android:contentDescription="@string/cancel"
				android:background="@drawable/button"
				android:onClick="OnCancelAcceptButtonClick"
				android:src="@drawable/ic_cancel" />

			<TextView
				android:id="@+id/annotType"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_toRightOf="@+id/cancelAcceptButton"
				android:layout_toLeftOf="@+id/acceptButton"
				android:gravity="center"
				android:singleLine="true"
				android:textColor="#FFFFFF"
				android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceMedium" />

			<ImageButton
				android:id="@+id/acceptButton"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_centerVertical="true"
				android:layout_alignParentRight="true"
				android:contentDescription="@string/accept"
				android:background="@drawable/button"
				android:onClick="OnAcceptButtonClick"
				android:src="@drawable/ic_check" />
		</RelativeLayout>

    </ViewAnimator>

	<RelativeLayout
		android:id="@+id/lowerButtons"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true" >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_alignParentBottom="true"
            android:id="@+id/reader_tabbar"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/reader_home_layout">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:id="@+id/reader_home"
                    android:adjustViewBounds="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/reader_library_layout">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:id="@+id/reader_library"
                    android:adjustViewBounds="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/reader_download_layout">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:id="@+id/reader_download"
                    android:adjustViewBounds="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/reader_info_layout">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:id="@+id/reader_info"
                    android:adjustViewBounds="true" />
            </LinearLayout>

        </LinearLayout>

        <SeekBar
			android:id="@+id/pageSlider"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="false"
			android:layout_centerHorizontal="true"
			android:layout_margin="0dp"
			android:thumb="@drawable/seek_thumb"
			android:progressDrawable="@drawable/seek_progress"
			android:paddingLeft="16dp"
			android:paddingRight="16dp"
			android:paddingTop="12dp"
			android:paddingBottom="8dp"
			android:background="@color/toolbar"
            android:layout_above="@+id/reader_tabbar"
            android:visibility="gone" />

		<TextView
			android:id="@+id/pageNumber"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_above="@+id/pageSlider"
			android:layout_centerHorizontal="true"
			android:layout_marginBottom="16dp"
			android:background="@drawable/page_num"
			android:textColor="#FFFFFF"
			android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/PreviewBarHolder"
            android:layout_width="match_parent"
            android:layout_height="@dimen/reader_bottom_preview_total_height"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/reader_tabbar">

            <ImageView
                android:id="@+id/reader_preview_bar_divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/reader_bottom_preview_divider"
                android:layout_alignParentTop="false"
                android:layout_above="@+id/reader_preview_bar_listView" />

            <com.artifex.mupdfdemo.ThumnailHorizontalListView
                android:layout_width="match_parent"
                android:layout_height="@dimen/reader_bottom_preview_height"
                android:id="@+id/reader_preview_bar_listView"
                android:layout_alignParentBottom="true">

            </com.artifex.mupdfdemo.ThumnailHorizontalListView>

        </RelativeLayout>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/reader_bottom_page_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:visibility="invisible">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/reader_bottom_page_img1"
            android:layout_centerInParent="true" />


        <RelativeLayout
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/reader_bottom_page_img2"
            android:layout_centerInParent="true" >

            <ImageView
                android:layout_width="17dp"
                android:layout_height="23dp"
                android:id="@+id/reader_bottom_page_img_ok"
                android:layout_centerInParent="true" />

            </RelativeLayout>






        </RelativeLayout>

    <TextView
		android:id="@+id/info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_centerVertical="true"
		android:background="@drawable/page_num"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:textColor="#FFFFFF" />

</RelativeLayout>
